# real_time_traffic_analysis_of_Madrid

./: .gitignore  LICENSE  README.md
.github/workflows/: lint.yml
data-preprocessing/: pyproject.toml
data-preprocessing/src/data_preprocessing/: main.py  obtaining_data.py  preprocessing.ipynb  preprocessing.py
data-preprocessing/src/data_preprocessing/data/: historic_aemet_data.csv  pmed_ubicacion_04_2025.csv
ml/: pyproject.toml
ml/src/ml/: cleaning_data.ipynb  data.py  train_and_evaluate_model.py  transform_data.py  utils.py
plot-streaming-data/: pyproject.toml
plot-streaming-data/src/plot_streaming_data/: __init__.py  app.py
