[project]
name = "data-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose", email = "jacbj42@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
data-preprocessing = "data_preprocessing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
