[project]
name = "data-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose", email = "jacbj42@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.5.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.13",
    "urllib3>=2.4.0",
]

[project.scripts]
data-preprocessing = "data_preprocessing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
