[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose", email = "jacbj42@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "ruff>=0.12.0",
]

[project.scripts]
ml = "ml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
