[project]
name = "plot-streaming-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose", email = "jacbj42@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pyspark>=4.0.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
]

[project.scripts]
plot-streaming-data = "plot_streaming_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
